--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <header>
-
+    <img src="images/logo-cat-coffee.png" alt="logo">
+    <a href="index.html#concept">コンセプト</a>
+    <a href="index.html#product">商品</a>
+    <a href="index.html#company">会社概要</a>
   </header>
-  
+
   <main>
 
   </main>
